# queohoh

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  wt.toml
crates/qoo-tui/: AGENTS.md  Cargo.toml
crates/qoo-tui/src/: action_menu.rs  app.rs  chain.rs  detail.rs  event.rs  heal.rs  hit.rs  keymap.rs  layout.rs  lib.rs  main.rs  markup.rs  paths.rs  ref_classify.rs  runfiles.rs  selectors.rs  test_fixtures.rs  worktree_context.rs
crates/qoo-tui/src/app/: action_result_tests.rs  actions.rs  bulk_flow_tests.rs  def_args.rs  def_pick_tests.rs  form.rs  form_tests.rs  heal_wiring_tests.rs  input_modal_tests.rs  mark_flow_tests.rs  menu_flow_tests.rs  menus.rs  mod.rs  mode.rs  mouse.rs  task21_tests.rs  tests.rs  update.rs
crates/qoo-tui/src/ipc/: client.rs  types.rs
crates/qoo-tui/src/markup/: mod.rs  tests.rs
crates/qoo-tui/src/selectors/: cols.rs  labels.rs  mod.rs  rows.rs  tests_a.rs  tests_b.rs
crates/qoo-tui/src/view/: args_form.rs  def_args.rs  detail.rs  footer.rs  form.rs  help.rs  menu.rs  mod.rs  modal.rs  multiline_input.rs  panes.rs  settings.rs  tabbar.rs  theme.rs
crates/qoo-tui/tests/: args_form_snapshot.rs  create_worktree_snapshot.rs  def_args_snapshot.rs  def_pick_snapshot.rs
crates/qoo-tui/tests/snapshots/: args_form_snapshot__args_form_multiline_and_prompt_snapshot.snap  args_form_snapshot__args_form_open_dropdown_snapshot.snap  args_form_snapshot__args_form_snapshot.snap  create_worktree_snapshot__create_worktree_modal_with_error_snapshot.snap  (+2 more)
docs/: lifecycle.md  (+1 more)
(+93 files in other folders)
