[package]
name = "qoo-tui"
version = "0.1.0"
edition = "2024"

[lib]
name = "qoo_tui"
path = "src/lib.rs"

[[bin]]
name = "qoo-tui"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
throbber-widgets-tui = "0.9.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "process", "fs"] }
tui-input = "0.14"

[dev-dependencies]
insta = "1.48.0"
serial_test = "3.5.0"
tempfile = "3.27.0"
